typescript/checker/tests/conformance/es7/trailingCommasInGetter.ts.stderr
error: Unexpected token Some(Comma)
 --> $DIR/tests/conformance/es7/trailingCommasInGetter.ts:2:11
  |
2 |     get x(,) { return 0; }
  |           ^

